--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,11 @@
 
 /* app container */
 #root {
-  max-width: 1280px;
+  width: 100%;
   /* center the app container */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1.25rem;
   /* placeholder styles */
   background-color: rgba(255, 204, 153, 0.75);
-  border: magenta 25px dotted;
-  width: 75%;
+  /* border: magenta 25px dotted; */
 }
