--- a/src/components/Main/Public/Auth.css
+++ b/src/components/Main/Public/Auth.css
@@ -1,21 +1,27 @@
 .authContainer {
   margin: 0px auto;
   width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   /* placeholder style */
-  border: 5px blue dotted;
-  background-color: rgba(0, 204, 153, 0.75);
+  /* border: 5px blue dotted; */
+  /* background-color: rgba(0, 204, 153, 0.75); */
 }
 
 .authContainer > h2 {
+  margin-bottom: 0.75rem;
   /* placeholder style */
-  background-color: pink;
+  /* background-color: pink; */
 }
 
 .authControlGroup {
   display: flex;
+  flex-direction: column;
   /* placeholder style */
-  background-color: white;
-  border: 5px magenta solid;
+  background-color: var(--lightNeutral);
+  padding: 1rem 1.25rem;
+  border: 5px var(--darkNeutral) solid;
 }
 
 .authControl {
@@ -24,28 +30,56 @@
   /* stack display of elements */
   display: flex;
   flex-direction: column;
-  padding: 14px 14px;
+  padding: 0.75rem 0;
+  /* padding: 14px 14px; */
   /* placeholder style */
-  background-color: coral;
-  border: 5px purple dashed;
+  /* background-color: coral; */
+  /* border: 5px purple dashed; */
 }
 
 /* style input for spacing between label and error */
 .authInput {
   margin: 5px 0;
+  padding: 0.5rem;
+  min-width: 400px;
+  height: 2rem;
+  border: 2px solid var(--darkNeutral);
+  font-size: 1.25rem;
+  background-color: var(--lightNeutral);
   /* placeholder style */
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
+}
+
+.errorMsg,
+.authErrorSummary {
+  color: var(--red);
+  /* placeholder style */
+  /* border: 5px black dotted; */
 }
 
 .authErrorSummary {
-  /* placeholder style */
-  border: 5px black dotted;
+  padding: 1rem 0;
 }
 
 .authSubmitBtn {
-  /* placeholder style */
-  padding: 25px;
+  /* color */
+  background-color: var(--darkNeutral);
+  color: var(--lightNeutral);
+  /* text */
+  font-size: 1.25rem;
+  font-weight: bold;
+  /* style */
+  border: none;
+  /* sizing */
+  padding: 1rem;
 }
+.authSubmitBtn:hover,
+.authSubmitBtn:focus,
+.authSubmitBtn:active {
+  background-color: var(--lightNeutral);
+  color: var(--darkNeutral);
+}
+
 /* responsive form elements */
 @media only screen and (max-width: 550px) {
   .authContainer {
