--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,34 @@
-/* included :root styles */
+/* font imports */
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color: var(--darkNeutral);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  /* color palette */
+  /* dark neutral */
+  --darkNeutral: hsla(185, 22%, 10%, 1);
+  /* light neutral */
+  --lightNeutral: hsla(42, 70%, 94%, 1);
+  /* red: error messages  */
+  --red: hsla(7, 64%, 54%, 1);
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
   /* start of added styles */
@@ -23,7 +37,5 @@ body {
   /* start of placeholder styles */
   /* image credit: screen rant */
   background: url("/src/assets/itysl-robert-palins.avif") no-repeat;
-  background-color: blue;
   background-size: cover;
-  border: 25px black dotted;
 }
