--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 /* layout styles for header, main, footer */
 header {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   /* placeholder styles */
   /* background-color: rgba(51, 153, 255, 0.5); */
   /* border: 5px navy dashed; */
