--- a/src/components/Main/Public/Auth.css
+++ b/src/components/Main/Public/Auth.css
@@ -74,9 +74,8 @@
 @media only screen and (max-width: 800px) {
   .authForm {
     width: 90%;
-  }
-  .authContainer {
-    width: 100%;
+    /* placeholder style */
+    background-color: pink;
   }
   .authControlGroup {
     flex-direction: column;
@@ -89,9 +88,10 @@
 
 /* TODO: move to Header.css */
 .authNavLinksContainer {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* remove gap */
+  /* gap: 2rem; */
   /* placeholder style */
   /* background-color: pink; */
 }
