Remove placeholder style

--- a/src/components/Main/Public/Auth.css
+++ b/src/components/Main/Public/Auth.css
@@ -75,7 +75,7 @@
   .authForm {
     width: 90%;
     /* placeholder style */
-    background-color: pink;
+    /* background-color: pink; */
   }
   .authControlGroup {
     flex-direction: column;
