--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,27 +7,27 @@
   /* background-color: blue; */
 }
 /* header elements for authorized users */
-.headerContainerUser {
+.headerContainer {
   /* display as flex with gap between links */
   display: flex;
   justify-content: space-between;
   /* placeholder style */
   /* background-color: maroon; */
 }
-.headerNavUser {
+.headerSignOut {
   text-align: center;
   align-self: center;
   padding: 0.75rem;
   /* placeholder style */
   /* background-color: yellow; */
 }
-.headerNavUser > a {
+.headerSignOut > a {
   padding: 1rem;
   color: var(--darkNeutral);
   border: 2px transparent solid;
 }
-.headerNavUser > a:active,
-.headerNavUser > a:hover {
+.headerSignOut > a:active,
+.headerSignOut > a:hover {
   border: 2px var(--darkNeutral) solid;
 }
 
@@ -37,27 +37,4 @@
   margin: 0 auto;
   /* placeholder style */
   /* background-color: maroon; */
-}
-.authNavContainer {
-  width: 50%;
-  margin: 0 auto;
-  display: flex;
-  /* placeholder style */
-  /* background-color: pink; */
-}
-.authNavLink {
-  color: var(--darkNeutral);
-  text-align: center;
-  padding: 1rem;
-  width: 100%;
-  /* placeholder style */
-  /* background-color: coral; */
-  /* border: 3px red dotted; */
-}
-.authNavLink.active {
-  font-weight: bold;
-  text-decoration: none;
-  background-color: hsla(42, 70%, 94%, 0.5);
-  /* placeholder style */
-  /* border: 2px var(--lightNeutral) solid; */
 }
