--- a/src/components/Main/Public/Auth.css
+++ b/src/components/Main/Public/Auth.css
@@ -1,3 +1,28 @@
+/* navigation */
+.authNavContainer {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  /* placeholder style */
+  /* background-color: pink; */
+}
+.authNavLink {
+  color: var(--darkNeutral);
+  text-align: center;
+  padding: 1rem;
+  width: 100%;
+  /* placeholder style */
+  /* background-color: coral; */
+  /* border: 3px red dotted; */
+}
+.authNavLink.active {
+  font-weight: bold;
+  text-decoration: none;
+  background-color: hsla(42, 70%, 94%, 0.5);
+  /* placeholder style */
+  /* border: 2px var(--lightNeutral) solid; */
+}
+
 /* form elements */
 .authForm {
   display: flex;
