--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
   #root {
     width: 100%;
   }
-  .headerContainerUser {
+  .headerContainer {
     /* display heading and nav elements vertically */
     flex-direction: column;
   }
